--- a/src/agv_demo/setup.cfg
+++ b/src/agv_demo/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/amr_webots_sim
+script_dir=$base/lib/agv_demo
 [install]
-install_scripts=$base/lib/amr_webots_sim
+install_scripts=$base/lib/agv_demo
